// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should alter rgb colors 1`] = `
"
div {
  color: rgb(255,0,0);
}
"
`;

exports[`should replace an rgb color with the full hex color 1`] = `
"
div {
  color: #ff3fe0;
}
"
`;

exports[`should replace an rgb color with the hsl color 1`] = `
"
div {
  color: hsl(0,100%,50%);
}
"
`;

exports[`should replace an rgb color with the keyword 1`] = `
"
div {
  color: red;
}
"
`;

exports[`should replace an rgb color with the short hex color 1`] = `
"
div {
  color: #f00;
}
"
`;
